# AOD

./: README.md  branch-test.txt
lab1/: .gitignore  CMakeLists.txt
lab1/plot-maker/: maker.py
lab1/results/: times.txt
lab1/src/: BFS.cpp  DFS.cpp  SCC.cpp  bipartite.cpp  graph_alg.cpp  graph_alg.hpp  topo_sort.cpp
lab1/tests/1/: g1-1.txt  g1-2.txt  g1-3.txt  g1u-1.txt  g1u-2.txt  g1u-3.txt  m1d.txt  m1u.txt  m2d.txt  m2u.txt  m3d.txt  m3u.txt  scc-test.txt
lab2/: data.json  ex1.jl  ex2.jl  ex3.jl  ex4.jl  ex6.jl
lab3/: .gitignore  Makefile  README.md
lab3/results/: Long-C-rnd.txt  Long-C.txt  Long-n-rnd.txt  Long-n.txt  Random4-C.txt  Random4-n-rnd.txt  Random4-n.txt  Square-C-rnd.txt  Square-C.txt  Square-n-rnd.txt  Square-n.txt  dist-merged.txt  dist-results.txt  dist-rnd-results.txt  dist.txt  main-result.txt
lab3/src/: algo.cpp  algo.hpp  main-tech.cpp  main-test.cpp  main.cpp
lab4/: .gitignore  Makefile  bipartite  hypercube
lab4/output/: bip-size-10.out  bip-size-3.out  bip-size-4.out  bip-size-5.out  bip-size-6.out  bip-size-7.out  bip-size-8.out  bip-size-9.out  bip-time-1.out  bip-time-10.out  bip-time-2.out  bip-time-3.out  bip-time-4.out  bip-time-5.out  bip-time-6.out  bip-time-7.out  bip-time-8.out  bip-time-9.out  hyp.out
lab4/plotting/: plot-bip.py  plot-cube.py
lab4/src/: algo.cpp  algo.hpp  bipartite.cpp  hypercube.cpp  main.cpp  test-bip-size.cpp  test-bip-time.cpp  test-hyp.cpp
